# SGD-Talk

./: .gitignore  GLMM.key  Hypothesis_EdBoone.pages  README.md  SWEng_stanford.key  TBD_6_15_2022.pages  Untitled.ipynb  Untitled.pages  airflownotes.pages  apigateway.key  asdfa  assume_role.json  aws_soln_architget_test.key  babel.pages  bayes_outliers.ipynb  cdk.pages  cdkprogramming.key  cloudformation_templates.pages  css_tables.pages  database_zookeeper.pages  docker.pages  doug_chang_rent_assisstance.pages  dummykey.key  earth_mover_distance_vs_KS_test.ipynb  edboone.pages  emd_not_good.pages  gsea-junk.pages  http_python.key  jiaozi.pages  kube.pages  lambda.pages  matplotlib.key  mecor1.Rmd  mecor1.nb.html  microservice_notes.pages  monolithic.pages  nextjs_materialui.pages  npm.pages  npx.pages  package-lock.json  (+23 more)
.ipynb_checkpoints/: MLE_multinomial-checkpoint.ipynb  Untitled-checkpoint.ipynb
a_react_admin/: package-lock.json  package.json
airflow-docker/: README.md  docker-compose.yml  partner_a.txt
airflow_docs/: airflow.pages
airflow_install/: README.md
airflow_local/: docker-compose-Local.yml
airflow_tests/: README.md
antlr2/: README.ref
antlr3/: README.ref
antlr_json_visitor/: JSON.g4  JSONParser.java  test0.txt
antlr_visitor/: Expr.g4
apache_arrow/: README.md  package-lock.json  package.json  test.js
api_design/: README.md
aws/: Untitled.ipynb  aws.pages  aws_template_parsing.ipynb  (+1 more)
selenium_perf_tests/test_req_res/: README.md  pyproject.toml  requirements.txt
selenium_perf_tests/test_req_res/src/: test_response.py
(+3570 files in other folders)
